--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+beautifulsoup4==4.12.2
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+python-dotenv==1.0.0
 google-api-core==2.12.0
 google-api-python-client==2.101.0
 google-auth==2.23.2
